<resources>
    /*Sign Fragment*/
    <string name="app_name">CatchHouse</string>
    <string name="bottom_nav_home">home</string>
    <string name="bottom_nav_map">map</string>
    <string name="bottom_nav_message">message</string>
    <string name="bottom_nav_my_page">myPage</string>
    <string name="fb_login_protocol_scheme">fb2175807422479387</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="main_title">Catch House</string>
    <string name="map_filter">필터</string>
    <string name="map_see_rooms">이 지역 매물보기</string>
    <string name="my_favorite_title">내가 찜한 방</string>
    <string name="recently_visit_title">최근 둘러본 방</string>
    <string name="sign_email">E - MAIL</string>
    <string name="sign_password">PASSWORD</string>
    <string name="sign_in_login">로그인</string>
    <string name="sign_up_nick_name">NICKNAME</string>
    <string name="sign_up_gender">Gender</string>
    <string name="sign_up">회원 가입</string>
    <string name="snack_fill_info">모든 정보를 입력해 주세요</string>
    <string name="snack_failed_load_image">이미지 로드에 실패했습니다.</string>
    <string name="snack_incorrect_email">이메일 형식을 정확히 입력해주세요</string>
    <string name="snack_already_exist_email">이미 존재하는 이메일 입니다.</string>
    <string name="snack_wrong_password_length">비밀번호를 6자리 이상 설정해주세요</string>
    <string name="snack_fb_sign_in_failed">로그인에 실패했습니다.</string>
    <string name="snack_fb_sign_up_failed">회원가입에 실패했습니다.</string>
    <string name="snack_fb_not_signed_user">회원 정보가 없습니다.</string>
    <string name="snack_error_occured">오류가 발생했습니다.</string>
    <string name="snack_invalid_user">아이디 비밀번호를 확인하세요</string>
    <string name="snack_short_password">비밀번호를 6자리 이상 입력해주세요</string>
    <string name="snack_try_again">에러가 발생했습니다. 잠시 후 다시 시도해주세요</string>


    /* fragment_home */
    <string name="home_title">Catch House</string>
    <string name="tv_home_search">내놓은 방 검색</string>
    <string name="tv_home_post">우리집 내놓기</string>

    /*fragment_my_page*/
    <string name="my_page_sell_room">판매중인 글 보기</string>
    <string name="my_page_change_member_info">회원 정보 변경</string>
    <string name="my_page_sign_out">로그 아웃</string>
    <string name="my_page_delete_user">회원 탈퇴</string>
    <string name="my_page_gender">(성별)</string>
    <string name="my_page_change_nick_name">닉네임 변경</string>
    <string name="my_page_change_password">비밀번호 변경</string>
    <string name="my_page_change_profile">프로필 이미지 변경</string>
    <string name="not_singed">로그인 후 이용 가능합니다.</string>
    <string name="dialog_input_change_nick_name">변경할 닉네임을 입력하세요</string>
    <string name="cancel">취소</string>
    <string name="change">변경하기</string>
    <string name="negative">아니오</string>
    <string name="dialog_positive">예</string>
    <string name="dialog_delete_user">회원 탈퇴하시겠습니까?\n(회원 탈퇴시 모든 정보를 복구 할 수 없습니다.)</string>
    <string name="dialog_sign_out">로그아웃 하시겠습니까?</string>
    <string name="dialog_change_password_title">비밀번호 변경</string>
    <string name="dialog_input_ex_password">이전 비밀번호를 입력하세요</string>
    <string name="dialog_new_password">새로운 비밀번호를 입력하세요</string>
    <string name="dialog_new_password_again">새로운 비밀번호를 다시 입력하세요</string>
    <string name="snack_same_nick_name">같은 닉네임을 입력했습니다.</string>
    <string name="snack_not_found_info">정보를 찾을 수 없습니다.</string>
    <string name="snack_duplicate_nick_name">이미 존재하는 닉네임 입니다.</string>
    <string name="snack_database_exception">정보 조회중 오류가 발생했습니다.</string>
    <string name="snack_wrong_password">비밀번호를 확인해주세요</string>
    <string name="snack_error_update_password">패스워드 변경에 실패했습니다.</string>
    <string name="snack_re_sign_in">비밀번호가 변경되었습니다. 다시 로그인 해주세요</string>
    <string name="snack_update_profile_failed">프로필 사진 변경에 실패했습니다.</string>
    <string name="snack_update_profile_success">프로필 사진이 변경되었습니다.</string>
    <string name="snack_change_nick_name_success">닉네임이 변경되었습니다.</string>

    /* activity_write */
    <string name="tv_write_gallery">사진 선택</string>
    <string name="tb_write">매물 올리기</string>

    <string name="tv_write_value">가격</string>
    <string name="et_write_value_hint">1박 가격을 적어주세요.</string>
    <string name="tv_write_from_to">기간</string>
    <string name="tv_write_date">기간 설정해주세요. </string>
    <string name="tv_write_from_hint">부터</string>
    <string name="tv_write_to_hint">까지</string>
    <string name="tv_write_ripple">~</string>
    <string name="tv_write_expected_value">예상 가격</string>
    <string name="tv_write_expected_value_default">0 원</string>
    <string name="cb_write_standard">기본옵션(냉장고, 에어컨, 인덕션)</string>
    <string name="cb_write_pet">반려동물 허용</string>
    <string name="cb_write_gender">동일성별</string>
    <string name="cb_write_smoking">실내 흡연 가능</string>
    <string name="tv_write_room_info">매물 정보</string>
    <string name="tv_write_address">주소</string>
    <string name="et_write_address_hint">클릭해서 주소를 찾으세요.</string>
    <string name="tv_write_room_size">방 크기</string>
    <string name="et_write_room_size_hint">평수를 입력해주세요.</string>
    <string name="tv_write_title">제목, 내용</string>
    <string name="tv_write_content">내용</string>
    <string name="tv_write_preview">미리 보기</string>
    <string name="tv_write_post">방 공유글 올리기</string>
    <string name="dl_write_ok">확인</string>
    <string name="et_write_title_hint">제목을 입력해주세요.</string>
    <string name="et_write_content_hint">글 내용을 적어주세요.</string>
    <string name="dl_write_finish">판매글이 등록되었습니다.</string>
    <string name="network_error">인터넷 연결을 확인해주세요.</string>
    <string name="empty_image_error">방 이미지를 정해주세요.</string>
    <string name="empty_price_error">방 가격을 설정해주세요.</string>
    <string name="no_selection_address">주소를 설정해주세요.</string>
    <string name="empty_room_size_error">방 크기를 입력해주세요.</string>
    <string name="empty_title_error">글의 제목을 정해주세요.</string>
    <string name="no_selection_date_error">기간을 설정을 확인해주세요.</string>
    <string name="db_network_error">네트워크가 불안정합니다. 다시 시도해 주세요.</string>

    /* fragment_address_search */
    <string name="fr_address_title">주소 찾기</string>
    <string name="tv_address_search">검색</string>
    <string name="et_address_keyword_hint">주소를 입력해주세요.</string>
    <string name="snack_search_success">검색을 완료하였습니다.</string>

    /* activity_filter_pop_up */
    <string name="tv_filter_price">가격</string>
    <string name="tv_filter_between">~</string>
    <string name="tv_filter_date">기간</string>
    <string name="tv_filter_option">옵션</string>
    <string name="tv_filter_option_distance">거리(km)</string>
    <string name="tv_filter_option_standard">기본 옵션</string>
    <string name="tv_filter_option_gender">동일 성별</string>
    <string name="tv_filter_option_pet">반려동물 허용</string>
    <string name="tv_filter_option_smoking">실내흡연 허용</string>
    <string name="bt_filter_apply">적용</string>
    <string name="tv_chatting_list_nick_name">판매자</string>
    <string name="tv_chatting_list_last_message">마지막 메세지</string>

    /* fragment_chatting_list*/
    <string name="snack_failed_make_chattingRoom">채팅방 개설에 실패했습니다.</string>
    <string name="snack_failed_load_list">조회 실패했습니다.</string>
    <string name="snack_failed_send_message">메세지 전송에 실패했습니다.</string>

    /* activity_post */
    <string name="tb_post">매물 상세 정보</string>
    <string name="tv_post_price">예상 금액</string>
    <string name="tv_post_room_info">매물 정보</string>
    <string name="tv_post_address">주소</string>
    <string name="tv_post_date">기간</string>
    <string name="tv_post_size">크기</string>
    <string name="tv_post_chat">쪽지보내기</string>
    <string name="tv_post_map">지도</string>
    <string name="formatted_period_bottom" formatted="false">%s \n ~ %s</string>
    <string name="formatted_period" formatted="false">%s ~ %s</string>
    <string name="formatted_room_size" formatted="false">%s평</string>
    <string name="formatted_user_info" formatted="false">닉네임: %s \n성별: %s</string>
    <string name="tv_post_favorite">좋아요</string>
    <string name="tv_post_chatting">작성자랑 채팅하기</string>
    <string name="sign_in_login_google">구글 로그인</string>
    <string name="sign_in_login_facebook">페이스북 로그인</string>
    <string name="snack_back_pressed">뒤로가기 버튼을 한 번 더 누르면 종료됩니다.</string>
    <string name="btn_modify">수정하기</string>
    <string name="btn_delete">삭제하기</string>
    <string name="dl_delete_finish">삭제 되었습니다.</string>
    <string name="dl_deleted_post">삭제된 글입니다.</string>

    /* navigation drawer */
    <string name="write_option">방 공유 하기</string>
    <string name="change_nickname_option">닉네임 변경</string>
    <string name="change_password_option">비밀번호 변경</string>
    <string name="change_profile_option">프로필 이미지 변경</string>
    <string name="logout_option">로그 아웃</string>
    <string name="delete_account_option">회원 탈퇴</string>
    <string name="formatted_nickname" formatted="false">닉네임: %s</string>
    <string name="formatted_email" formatted="false">아이디: %s</string>
    <string name="menu_title_account">회원 관리</string>
    <string name="home_sell">판매하기</string>
    <string name="home_search">검색하기</string>
    <string name="no_chatting">새로운 채팅을 시작해 보세요</string>
    <string name="my_page_sell_list">내 판매 리스트</string>

</resources>
